--- a/frontend/src/pages/HubspotIntegration.css
+++ b/frontend/src/pages/HubspotIntegration.css
@@ -44,3 +44,12 @@ button {
 button:hover {
     background-color: #0056b3;
 }
+
+select {
+    width: 105%;
+    padding: 10px;
+    margin-top: 5px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
